feat: Improve problem parser and tests
- Improved the problem parser to correctly handle whitespace and punctuation after removing formulas.
- Added a comprehensive test case with complex, mixed-type formulas to ensure robust parsing.
- Updated existing tests to reflect the corrected parsing logic and provide clearer output in test reports.
- Resolved a dependency conflict by updating the `gensim` version in `requirements.txt`.

Stage: PoC Implementation

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ langchain
 openai
 langchain-community
 # Dependencies for TangentCFT
-gensim==4.3.3
+gensim
 matplotlib==3.10.1
 numpy==1.26.4
 beautifulsoup4==4.13.3
