--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ beautifulsoup4==4.13.3
 tqdm==4.67.1
 lxml==5.3.1
 pytest-html
+
+# Graph Database & GCP
+networkx
+google-cloud-aiplatform
+neo4j
+transformers
+accelerate
