--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,9 @@ on:
 env:
   GCP_REGION: asia-northeast3
   GAR_REPOSITORY: meta-rag-repo
+  AWS_REGION: ap-northeast-2
+  ECR_REPOSITORY: meta-rag-repo
   SERVICE_NAME: meta-rag-backend-v2
-  TERRAFORM_DIR: ./terraform
 
 jobs:
   test:
@@ -32,8 +33,8 @@ jobs:
       - name: Run pytest
         run: pytest
 
-  deploy:
-    name: Build and Deploy to Cloud Run via Terraform
+  deploy-gcp:
+    name: Build and Deploy to GCP Cloud Run
     needs: test
     runs-on: ubuntu-latest
 
@@ -54,11 +55,11 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
 
-      - name: Configure Docker
+      - name: Configure Docker for GCP
         run: gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev
 
-      - name: Build and Push Docker Image
-        id: build-image
+      - name: Build and Push Docker Image to GAR
+        id: build-gcp-image
         run: |
           IMAGE_TAG=${{ env.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
           docker build -t $IMAGE_TAG .
@@ -70,11 +71,58 @@ jobs:
         with:
           terraform_wrapper: false
 
-      - name: Terraform Init
-        run: terraform -chdir=${{ env.TERRAFORM_DIR }} init
+      - name: Terraform Init for GCP
+        run: terraform -chdir=terraform/gcp init
 
-      - name: Terraform Plan
-        run: terraform -chdir=${{ env.TERRAFORM_DIR }} plan -var="image_name=${{ steps.build-image.outputs.image_name }}"
+      - name: Terraform Plan for GCP
+        run: terraform -chdir=terraform/gcp plan -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
 
-      - name: Terraform Apply
-        run: terraform -chdir=${{ env.TERRAFORM_DIR }} apply -auto-approve -var="image_name=${{ steps.build-image.outputs.image_name }}"
+      - name: Terraform Apply for GCP
+        run: terraform -chdir=terraform/gcp apply -auto-approve -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
+
+  deploy-aws:
+    name: Build and Deploy to AWS ECR
+    needs: test
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and push Docker image to ECR
+        id: build-aws-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          IMAGE_TAG=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          docker build -t $IMAGE_TAG .
+          docker push $IMAGE_TAG
+          echo "image_name=$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
+
+      - name: Terraform Init for AWS
+        run: terraform -chdir=terraform/aws init
+
+      - name: Terraform Plan for AWS
+        run: terraform -chdir=terraform/aws plan -var="image_name=${{ steps.build-aws-image.outputs.image_name }}"
+
+      - name: Terraform Apply for AWS
+        run: terraform -chdir=terraform/aws apply -auto-approve -var="image_name=${{ steps.build-aws-image.outputs.image_name }}"
