feat(gcp): Migrate RAG backend from local FAISS to Vertex AI
- Replaces the local FAISS index with a fully managed Vertex AI Vector Search backend for improved scalability and management.
- Adds Terraform resources to provision the Vertex AI Index and Index Endpoint.
- Updates the CI/CD pipeline to pass Vertex AI configuration to Terraform, enabling automated deployment.
- Modifies the core application logic to use the Vertex AI SDK for vector retrieval, removing all local FAISS code.
- Adds a Python script to generate embeddings in the format required by Vertex AI.
- Adds comprehensive documentation for the Vertex AI setup process and defers Neo4j integration from the PoC scope.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,10 +75,16 @@ jobs:
         run: terraform -chdir=terraform/gcp init
 
       - name: Terraform Plan for GCP
-        run: terraform -chdir=terraform/gcp plan -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
+        env:
+          TF_VAR_vector_index_dimensions: 384
+          TF_VAR_vector_index_contents_uri: "gs://meta_rag_bucket/embeddings/"
+        run: terraform -chdir=terraform/gcp plan -var="gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
 
       - name: Terraform Apply for GCP
-        run: terraform -chdir=terraform/gcp apply -auto-approve -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
+        env:
+          TF_VAR_vector_index_dimensions: 384
+          TF_VAR_vector_index_contents_uri: "gs://meta_rag_bucket/embeddings/"
+        run: terraform -chdir=terraform/gcp apply -auto-approve -var="gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" -var="image_name=${{ steps.build-gcp-image.outputs.image_name }}"
 
   deploy-aws:
     name: Build and Deploy to AWS ECR
