fix(ci): Upgrade Terraform provider to fix deployment
- Adds the -upgrade flag to `terraform init` to ensure the latest Google Cloud provider is used, resolving resource type errors.
- Adds documentation for the embedding update process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           terraform_wrapper: false
 
       - name: Terraform Init for GCP
-        run: terraform -chdir=terraform/gcp init
+        run: terraform -chdir=terraform/gcp init -upgrade
 
       - name: Terraform Plan for GCP
         env:
